--- a/mobile/package.json
+++ b/mobile/package.json
@@ -9,12 +9,15 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@react-navigation/bottom-tabs": "^6.4.0",
     "expo": "~46.0.13",
     "expo-sensors": "~11.4.0",
     "expo-status-bar": "~1.4.0",
     "nativewind": "^2.0.11",
     "react": "18.0.0",
     "react-native": "0.69.6",
+    "react-native-safe-area-context": "4.3.1",
+    "react-native-screens": "~3.15.0",
     "twrnc": "^3.4.0"
   },
   "devDependencies": {
