--- a/mobile/package.json
+++ b/mobile/package.json
@@ -14,6 +14,7 @@
     "expo-sensors": "~11.4.0",
     "expo-status-bar": "~1.4.0",
     "nativewind": "^2.0.11",
+    "phosphor-react-native": "^1.1.2",
     "react": "18.0.0",
     "react-native": "0.69.6",
     "react-native-safe-area-context": "4.3.1",
