--- a/mobile/package.json
+++ b/mobile/package.json
@@ -19,6 +19,7 @@
     "react-native": "0.69.6",
     "react-native-safe-area-context": "4.3.1",
     "react-native-screens": "~3.15.0",
+    "react-native-svg": "^9.13.3",
     "twrnc": "^3.4.0"
   },
   "devDependencies": {
