--- a/mobile/package.json
+++ b/mobile/package.json
@@ -19,12 +19,13 @@
     "react-native": "0.69.6",
     "react-native-safe-area-context": "4.3.1",
     "react-native-screens": "~3.15.0",
-    "react-native-svg": "^9.13.3",
+    "react-native-svg": "^12.3.0",
     "twrnc": "^3.4.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
     "@expo/ngrok": "^4.1.0",
+    "react-native-svg-transformer": "^1.0.0",
     "tailwindcss": "^3.1.8"
   },
   "private": true
