--- a/mobile/package.json
+++ b/mobile/package.json
@@ -20,7 +20,8 @@
     "react-native-safe-area-context": "4.3.1",
     "react-native-screens": "~3.15.0",
     "react-native-svg": "^12.3.0",
-    "twrnc": "^3.4.0"
+    "twrnc": "^3.4.0",
+    "expo-font": "~10.2.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
