--- a/mobile/package.json
+++ b/mobile/package.json
@@ -10,7 +10,9 @@
   },
   "dependencies": {
     "@react-navigation/bottom-tabs": "^6.4.0",
+    "@react-navigation/native-stack": "^6.9.0",
     "expo": "~46.0.13",
+    "expo-font": "~10.2.0",
     "expo-sensors": "~11.4.0",
     "expo-status-bar": "~1.4.0",
     "nativewind": "^2.0.11",
@@ -20,8 +22,7 @@
     "react-native-safe-area-context": "4.3.1",
     "react-native-screens": "~3.15.0",
     "react-native-svg": "^12.3.0",
-    "twrnc": "^3.4.0",
-    "expo-font": "~10.2.0"
+    "twrnc": "^3.4.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
